
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int ;
typedef int send_recv ;


 int FAD ;
 int FTP_CONN_SCS ;
 int FTP_LOGIN_FAD ;
 int FTP_LOGIN_SCS ;
 int FTP_USER_FAD ;
 int GET_R ;
 int NRL ;
 int SCS ;
 int close (int) ;
 int exit (int ) ;
 int fprintf (int ,char*,...) ;
 int memset (char*,int ,int) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int ,int ) ;
 int sleep (int ) ;
 int snprintf (char*,int,char*,char*) ;
 int stdout ;
 int strlen (char*) ;
 scalar_t__ strstr (char*,int ) ;

void ftpd_login(int sock,char *user,char *pass)
{
        char send_recv[(GET_R)];

        (u_int)sleep(SCS);
        memset((char *)send_recv,(NRL),sizeof(send_recv));
        recv(sock,send_recv,sizeof(send_recv)-1,(NRL));

        if(!strstr(send_recv,(FTP_CONN_SCS)))
        {
                fprintf(stdout," [-] ftpd connection failure.\n\n");
                close(sock);
                exit(FAD);
        }
        else fprintf(stdout," [*] ftpd connection success.\n");
        fprintf(stdout," [+] User id input.\n");

        memset((char *)send_recv,(NRL),sizeof(send_recv));
        snprintf(send_recv,sizeof(send_recv)-1,"USER %s\r\n",user);
        send(sock,send_recv,strlen(send_recv),(NRL));

        (u_int)sleep(SCS);
        memset((char *)send_recv,(NRL),sizeof(send_recv));
        recv(sock,send_recv,sizeof(send_recv)-1,(NRL));

        if(!strstr(send_recv,(FTP_USER_FAD)))
        {
                fprintf(stdout," [-] User id input failure.\n\n");
                close(sock);
                exit(FAD);
        }
        else fprintf(stdout," [+] User password input.\n");

        memset((char *)send_recv,(NRL),sizeof(send_recv));
        snprintf(send_recv,sizeof(send_recv)-1,"PASS %s\r\n",pass);
        send(sock,send_recv,strlen(send_recv),(NRL));

        (u_int)sleep(SCS);
        memset((char *)send_recv,(NRL),sizeof(send_recv));
        recv(sock,send_recv,sizeof(send_recv)-1,(NRL));

        if(strstr(send_recv,(FTP_LOGIN_FAD)))
        {
                fprintf(stdout," [-] FAILED LOGIN on %s.\n\n",user);
                close(sock);
                exit(FAD);
        }
        else if(strstr(send_recv,(FTP_LOGIN_SCS)))
        {
                fprintf(stdout," [*] User %s logged in.\n",user);
        }
        else
        {
                fprintf(stdout," [-] ftpd handshake failure.\n\n");
                close(sock);
                exit(FAD);
        }
        return;
}
